--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 115%;
+  background-color: lightgoldenrodyellow;
 }
 
 header {
@@ -8,7 +9,21 @@ header {
 }
 
 nav {
-  background-color: lightblue;
+  display: inline-block;
+  width: 80%;
+}
+
+header img {
+  width: 10%;
+  position: relative;
+  top: 20px;
+}
+
+nav ul{
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  justify-content: space-evenly;
 }
 
 main {
@@ -20,10 +35,10 @@ footer{
   background-color: darkgray;
 }
 
-li {
+/* li {
   display: inline-block;
   width: 150px;
-}
+} */
 
 h1 {
   text-align: center;
@@ -33,4 +48,22 @@ h1 {
 
 p {
   line-height: 1.5;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 40% 40%;
+  justify-content: space-evenly;
+  align-items: center;
+  row-gap: 20px;
+}
+
+.container img {
+  width: 100%;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
